[package]
name = "tacoda_grrs"
version = "0.1.0"
authors = ["Ian Johnson <tacoda@pm.me>"]
edition = "2018"
license = "MIT"
description = "Ad tool to search files"
readme = "README.md"
homepage = "https://github.com/tacoda/grrs"
repository = "https://github.com/tacoda/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.2.16"
failure = "0.1.5"
exitfailure = "0.5.1"
assert_cmd = "0.11.1"
predicates = "1.0.1"
